--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
     --scroll-width: 10px;
     --scroll-height: 10px;
 
-    --scroll-track-rgb: #1C1917;
+    --scroll-track-rgb: #0A0A0A;
     --scroll-track-border-radius: 0px;
 
     --scroll-thumb-rgb: #292524;
@@ -23,47 +23,45 @@
 
 /* Scrollbar */
 
-/* WebKit browsers (Chrome, Safari, Edge) */
 ::-webkit-scrollbar {
-    width: var(--scroll-width); /* Width of the scrollbar */
-    height: var(--scroll-height); /* Height of the scrollbar (for horizontal scrollbars) */
+    width: var(--scroll-width);
+    height: var(--scroll-height);
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--scroll-track-rgb); /* Background of the scrollbar track */
-    border-radius: var(--scroll-track-border-radius); /* Rounded corners of the track */
+    background: var(--scroll-track-rgb);
+    border-radius: var(--scroll-track-border-radius);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--scroll-thumb-rgb); /* Color of the scrollbar thumb */
-    border-radius: var(--scroll-thumb-border-radius); /* Rounded corners of the thumb */
+    background: var(--scroll-thumb-rgb);
+    border-radius: var(--scroll-thumb-border-radius);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--scroll-thumb-hover-rgb); /* Color of the scrollbar thumb when hovered */
+    background: var(--scroll-thumb-hover-rgb);
 }
 
-/* Firefox */
 body {
-    scrollbar-width: thin; /* Sets the scrollbar width to thin */
-    scrollbar-color: var(--scroll-thumb-rgb) var(--scroll-track-rgb); /* Sets the thumb and track color */
+    scrollbar-width: thin;
+    scrollbar-color: var(--scroll-thumb-rgb) var(--scroll-track-rgb);
 }
 
 body::-webkit-scrollbar {
-    width: var(--scroll-width); /* Width of the scrollbar */
-    height: var(--scroll-height); /* Height of the scrollbar (for horizontal scrollbars) */
+    width: var(--scroll-width);
+    height: var(--scroll-height);
 }
 
 body::-webkit-scrollbar-track {
-    background: var(--scroll-track-rgb); /* Background of the scrollbar track */
-    border-radius: var(--scroll-track-border-radius); /* Rounded corners of the track */
+    background: var(--scroll-track-rgb);
+    border-radius: var(--scroll-track-border-radius);
 }
 
 body::-webkit-scrollbar-thumb {
-    background: var(--scroll-thumb-rgb); /* Color of the scrollbar thumb */
-    border-radius: var(--scroll-thumb-border-radius); /* Rounded corners of the thumb */
+    background: var(--scroll-thumb-rgb);
+    border-radius: var(--scroll-thumb-border-radius);
 }
 
 body::-webkit-scrollbar-thumb:hover {
-    background: var(--scroll-thumb-hover-rgb); /* Color of the scrollbar thumb when hovered */
+    background: var(--scroll-thumb-hover-rgb);
 }
